# ngnc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.w32  README.md  chattabitem.cpp  chattabitem.h  connectdlg.cpp  defs.h  dnsresolver.cpp  icons.cpp  icons.h  main.cpp  nakenclient.cpp  nakenclient.h  ngnc.cpp  ngnc.h  prefs.cpp  prefs.h  prefsdlg.cpp  prefsdlg.h
.github/workflows/: cmake.yml
src/: CMakeLists.txt  chattabitem.cpp  connectdlg.cpp  connectdlg.h  defs.h  dnsresolver.cpp  dnsresolver.h  icons.cpp  main.cpp  nakenclient.cpp  nakenclient.h  ngnc.cpp  ngnc.h  prefs.cpp  prefs.h  prefsdlg.cpp  prefsdlg.h
